# group-3

./: .gitignore  Blinder demo.pptx  README.md
3rd_perspective_cube_windows/: CMakeLists.txt
3rd_perspective_cube_windows/src/: Shader.cpp  Tokenizer.cpp  Window.cpp
BlinderEngine/: Audio.cpp  BLINDERIMPORTER.H  BlinderEngine.sln  BlinderEngine.vcxproj  BlinderEngine.vcxproj.filters  Obstacles.cpp  UI.h  main.cpp
BlinderEngine/bak/: BlinderEngine.vcxproj  BlinderEngine.vcxproj.filters  DaeObject.cpp
BlinderEngine/include/: AliceSkill.h  Audio.h  BCamera.h  BShader.h  Camera.h  Constants.h  Cube.h  DaeObject.h  DaveSkill.h  DynamicModel.h  DynamicShader.h  FinalScene.h  Fog.h  Image.h  Light.h  MShader.h  Map.h  Mesh.h  Minimap.h  Model.h  Mult_Lights.h  ObjObject.h  ObsObject.cpp  ObsObject.h  Obstacles.h  Particles.h  PlayerModel.h  Scene.h  Skybox.h  StaticModel.h  StaticShader.h  Submap.h  Texture.h  Timer.h  UI.h  (+9 more)
client/: Client.cpp  Client.h  main.cpp
cube_3rd_person/: menv
cube_3rd_person_macos/: Makefile  main.cpp  output.txt
cube_map/: Makefile  main.cpp  menv  output.txt  test.cpp
game/: Player.cpp  Player.h
graphic basic/: main.cpp  menv  tube.skel  tube.skin
graphic_basic/: Makefile  README.md  imgui.ini  menv  test.skel
server/: Server.cpp  Server.h  main.cpp  server.sln  server.vcxproj  server.vcxproj.filters
shared/: Event.cpp  Event.h  GameData.cpp  GameData.h  GameData.h~Updated upstream  GameStates.vcxproj  GameStates.vcxproj.filters  GlobalVariables.h  GlobalVariables.h~Updated upstream  Packet.cpp  Packet.h  Player.cpp  Player.h
(+236 files in other folders)
